--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             <div class="item-container"></div>
         <!-- Right/Wrong Buttons -->
             <div class="item-footer">
-                <button class="wrong">Wrong</button>
-                <button class="right">Right</button>
+                <button class="wrong" onclick="select(false)">Wrong</button>
+                <button class="right" onclick="select(true)">Right</button>
             </div>
         </div>
 
@@ -98,5 +98,6 @@
     </div>
     <!-- Script -->
     <script src="script.js"></script>
+    <script src="shuffle.js"></script>
 </body>
 </html>
