--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Game Container -->
     <div class="game-container">
+
         <!-- Header -->
         <div class="header">
             <h1>Math Sprint Game</h1>
@@ -25,7 +25,7 @@
                         <input type="radio" name="questions" value="10" id="value-10">
                         <span class="best-score">
                             <span>Best Score</span>
-                            <span class="best-score-value">0.0s</span>
+                            <span class="best-score-value"></span>
                         </span>
                     </div>
                     <!-- 25 Questions Radio Input -->
@@ -34,7 +34,7 @@
                         <input type="radio" name="questions" value="25" id="value-25">
                         <span class="best-score">
                             <span>Best Score</span>
-                            <span class="best-score-value">0.0s</span>
+                            <span class="best-score-value"></span>
                         </span>
                     </div>
                     <!-- 50 Questions Radio Input -->
@@ -43,7 +43,7 @@
                         <input type="radio" name="questions" value="50" id="value-50">
                         <span class="best-score">
                             <span>Best Score</span>
-                            <span class="best-score-value">0.0s</span>
+                            <span class="best-score-value"></span>
                         </span>
                     </div>
                     <!-- 99 Questions Radio Input -->
@@ -52,7 +52,7 @@
                         <input type="radio" name="questions" value="99" id="value-99">
                         <span class="best-score">
                             <span>Best Score</span>
-                            <span class="best-score-value">0.0s</span>
+                            <span class="best-score-value"></span>
                         </span>
                     </div>
                 </div>
@@ -63,41 +63,40 @@
             </form>
         </div>
 
-        <!-- Countdow Page -->
+        <!-- Countdown Page -->
         <div class="card" id="countdown-page" hidden>
-            <h1 class="countdown"></h1>
+            <h1 class="countdown">3</h1>
         </div>
 
         <!-- Game Page -->
         <div class="card" id="game-page" hidden>
             <!-- Item Container -->
             <div class="item-container"></div>
-        <!-- Right/Wrong Buttons -->
+            <!-- Right/Wrong Buttons -->
             <div class="item-footer">
                 <button class="wrong" onclick="select(false)">Wrong</button>
                 <button class="right" onclick="select(true)">Right</button>
             </div>
-        </div>
+        </div>        
 
         <!-- Score Page -->
         <div class="card" id="score-page" hidden>
             <!-- Score Container -->
             <div class="score-container">
                 <h1 class="title">Your Time</h1>
-                <h1 class="final-time">3.4s</h1>
-                <h1 class="base-time">Base Time: 2.4s</h1>
-                <h1 class="penalty-time">Penalty: +1.0s</h1>
+                <h1 class="final-time"></h1>
+                <h1 class="base-time"></h1>
+                <h1 class="penalty-time"></h1>
             </div>
             <!-- Play Again Button -->
             <div class="score-footer">
-                <button class="play-again">Play Again</button>
+                <button class="play-again" onclick="playAgain()" hidden>Play Again</button>
             </div>
         </div>
 
-
     </div>
     <!-- Script -->
-    <script src="script.js"></script>
     <script src="shuffle.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
